# SplineFitter

./: AUTHORS  ChangeLog  Makefile.am  README.md  configure.ac
Spline/: BSpline.hh  DataPoint.hh  Exceptions.hh  Makefile.am  Matrix.hh
doc/: Doxyfile  Makefile.am
example/: Makefile.am  main.cxx
m4/: boost.m4  goodRunsLists.m4  gsl.m4  jetCalibrationTool.m4  root.m4
src/: BSpline.cxx  Makefile.am
